--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Build2.loader.js";
+      var loaderUrl = buildUrl + "/BuildGithub.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/Build2.data.br",
-        frameworkUrl: buildUrl + "/Build2.framework.js.br",
-        codeUrl: buildUrl + "/Build2.wasm.br",
+        dataUrl: buildUrl + "/BuildGithub.data.gz",
+        frameworkUrl: buildUrl + "/BuildGithub.framework.js.gz",
+        codeUrl: buildUrl + "/BuildGithub.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "WebAR",
